--- a/css/styles.css
+++ b/css/styles.css
@@ -53,12 +53,18 @@ nav {
 }
 
 .btn {
-    background-color: rgb(0, 4, 255);
+    background-color: #065FF6;
     padding: 5px 10px;
-    color: #fff
+    color: #fff;
+    display: inline-block;
+    font-size: 0.8rem;
 }
 
 /* ----- MAIN ----- */
+
+p {
+    font-size: 0.9rem;
+}
 
 .section {
     padding: 40px 0;
@@ -91,5 +97,19 @@ main img {
 
 .arrow {
     font-size: 2rem;
+    padding-top: 40px;
+}
+
+.col-small {
+    width: 40%;
+}
+
+.col-wide {
+    width: 60%;
+}
+
+.container-small {
+    width: 860px;
+    margin: 0 auto;
 }
 /* ----- FOOTER ----- */
