--- a/css/styles.css
+++ b/css/styles.css
@@ -132,13 +132,14 @@ h2 {
 .card {
     border: 1px solid #777;
     height: 100%;
+    font-size: 0.8rem;
 }
 
 .card-bottom {
     padding: 20px;
 }
 
-.col {
+main .col {
     flex-grow: 1;
 }
 
@@ -155,6 +156,14 @@ h2 {
 
 .punti-salienti .fa-check {
     color: #065FF6;
+}
+
+.wrap {
+    flex-wrap: wrap;
+}
+
+.grow {
+    flex-grow: 1;
 }
 
 
