--- a/css/styles.css
+++ b/css/styles.css
@@ -135,7 +135,7 @@ h2 {
     font-size: 0.8rem;
 }
 
-.card-bottom {
+.internal-spacing {
     padding: 20px;
 }
 
@@ -164,6 +164,12 @@ main .col {
 
 .grow {
     flex-grow: 1;
+}
+
+.white {
+    border: 1px solid #777;
+    background-color: #fff;
+    color: #777;
 }
 
 
