--- a/css/styles.css
+++ b/css/styles.css
@@ -172,5 +172,73 @@ main .col {
     color: #777;
 }
 
+.brand-square-container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.brand-square {
+    width: 50%;
+    aspect-ratio: 1/1;
+    background-color: #777;
+    padding: 50px;
+}
+
+.brand-square > img {
+    height: 100%;
+    width: 100%;
+    filter: invert(1);
+}
+
+.small-w {
+    width: 40%;
+}
+
+.designit {
+    background-color: #A2D39B;
+    color: #fff;
+}
+
+.arizona {
+    background-color: #62142B;
+}
+
+.florida {
+    background-color: #3693CE;
+}
+
+.topps {
+    background-color: #ED3833;
+}
+
+.bicycle {
+    background-color: #D6322D;
+}
+
+.hearts {
+    background-color: #B4D0E7;
+}
+
+.lonely {
+    background-color: #0D2481;
+}
+
+.clear {
+    background-color: #ffff00;
+}
+
+.pourple {
+    color: #62142B;
+}
+
+.bottom-line {
+    border-bottom: 1px solid #777;
+    padding: 20px;
+}
+
 
 /* ----- FOOTER ----- */
+
+footer .section {
+    background-color: #000;
+}
