--- a/css/styles.css
+++ b/css/styles.css
@@ -241,4 +241,28 @@ main .col {
 
 footer .section {
     background-color: #000;
+    color: #fff;
+}
+
+footer ul li {
+    list-style-type: none;
+    font-size: 0.9rem;
+}
+
+footer h4 {
+    margin-bottom: 10px;
+}
+
+footer ul li {
+    font-size: 0.8rem;
+    margin-bottom: 10px;
+}
+
+.lenguage {
+    font-size: 0.8rem;
+}
+
+.lenguage i,
+.lenguage div {
+    padding: 2px;
 }
